--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
